--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs: # a collection of steps
       - checkout: # check out source code to working directory
           path: ~/plantmap
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+      - run:
       - restore_cache:
           key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
       - restore_cache:
@@ -62,6 +63,6 @@ jobs: # a collection of steps
 
 # Orchestrate or schedule a set of jobs
 workflows:
-plantmap:
+  plantmap:
     jobs:
       - build
