--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs: # a collection of steps
           path: build/libs
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   build_frontend:
-    working_directory: ~/plantmap/backend
+    working_directory: ~/plantmap/frontend
     docker:
       - image: circleci/android:api-25-alpha
     environment:
