Update Android SDK API version to 29 for .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs: # a collection of steps
   build_frontend:
     working_directory: ~/plantmap/frontend
     docker:
-      - image: circleci/android:api-25-alpha
+      - image: circleci/android:api-29
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
