--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,8 @@ version: 2.1
 
 # Use a package of configuration called an orb.
 jobs: # a collection of steps
-  build:
-    working_directory: backend
-    # Remove if parallelism is not desired
-    parallelism: 2
+  build_backend:
+    working_directory: ~/plantmap/backend
     environment:
       # Configure the JVM and Gradle to avoid OOM errors
       _JAVA_OPTIONS: "-Xmx3g"
@@ -14,7 +12,8 @@ jobs: # a collection of steps
     docker: # run the steps with Docker
       - image: circleci/openjdk:11.0.3-jdk-stretch # ...with this image as the primary container; this is where all `steps` will run
     steps: # a collection of executable commands
-      - checkout # check out source code to working directory
+      - checkout: # check out source code to working directory
+          path: ~/plantmap
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
       - restore_cache:
           key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
@@ -60,9 +59,46 @@ jobs: # a collection of steps
       - store_artifacts:
           path: build/libs
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+  build_frontend:
+    working_directory: ~/plantmap/frontend
+    docker:
+      - image: circleci/android:api-29
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout:
+          path: ~/plantmap
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+#      - run:
+#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+#         command: sudo chmod +x ./gradlew
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - run:
+          name: Assemble APK
+          command: ./gradlew assembleDebug
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: app/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: app/build/test-results
+      - store_artifacts:
+          path: app/build/outputs/apk/debug
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+
 
 # Orchestrate or schedule a set of jobs
 workflows:
   plantmap:
     jobs:
-      - build
+      - build_backend
+      - build_frontend
