Ignore commits on the 'reports' branch in the CI trigger

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,9 @@ jobs: # a collection of steps
 # Orchestrate or schedule a set of jobs
 workflows:
   plantmap:
+    branches:
+      ignore:
+        - reports
     jobs:
       - build_backend
       - build_frontend
