--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,9 +99,14 @@ jobs: # a collection of steps
 # Orchestrate or schedule a set of jobs
 workflows:
   plantmap:
-    branches:
-      ignore:
-        - reports
     jobs:
-      - build_backend
-      - build_frontend
+      - build_backend:
+        filters:
+          branches:
+            ignore:
+              -reports
+      - build_frontend:
+        filters:
+          branches:
+            ignore:
+              -reports
