--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,10 +103,8 @@ workflows:
       - build_backend:
         filters:
           branches:
-            ignore:
-              -reports
+            ignore: reports
       - build_frontend:
         filters:
           branches:
-            ignore:
-              -reports
+            ignore: reports
