Try ignoring everything (CircleCI ignore reports branch fix...)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,8 +105,8 @@ workflows:
       - build_backend:
         filters:
           branches:
-            ignore: reports
+            ignore: /.*/
       - build_frontend:
         filters:
           branches:
-            ignore: reports
+            ignore: /.*/
