--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,8 +105,8 @@ workflows:
       - build_backend:
         filters:
           branches:
-            ignore: /.*/
+            ignore: reports
       - build_frontend:
         filters:
           branches:
-            ignore: /.*/
+            ignore: reports
