--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,4 +13,13 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    //Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    //mssql
+    compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.1.4.jre8-preview'
 }
