--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -12,6 +12,9 @@ repositories {
 }
 
 dependencies {
+
+    // Spark
+    compile 'com.sparkjava:spark-core:2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     //Lombok
