--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    // Json
+    compile group: 'org.json', name: 'json', version: '20190722'
+
     //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
