--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
