--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.volley:volley:1.1.1'
 
+    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0'
 }
