More fixes to gradle config

--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -32,6 +32,9 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude("META-INF/*.kotlin_module")
     }
+    lintOptions {
+        warning 'InvalidPackage'
+    }
 }
 
 dependencies {
