--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.volley:volley:1.1.1'
-
-    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0'
 }
