--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 jobs: # a collection of steps
   build_backend:
-    working_directory: ~/plantmap/backend
+    working_directory: ~/plantmap
     environment:
       # Configure the JVM and Gradle to avoid OOM errors
       _JAVA_OPTIONS: "-Xmx3g"
@@ -18,22 +18,22 @@ jobs: # a collection of steps
       - restore_cache:
           key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
       - restore_cache:
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
+          key: v1-gradle-cache-{{ checksum "build.gradle" }}-{{ checksum "backend/build.gradle" }}
       - run:
           name: Run tests in parallel # See: https://circleci.com/docs/2.0/parallelism-faster-jobs/
           # Use "./gradlew test" instead if tests are not run in parallel
           command: |
-            cd src/test/java
+            cd backend/src/test/java
             # Get list of classnames of tests that should run on this node
             CLASSNAMES=$(circleci tests glob "**/*.java" \
               | cut -c 1- | sed 's@/@.@g' \
               | sed 's/.\{5\}$//' \
               | circleci tests split --split-by=timings --timings-type=classname)
-            cd ../../..
+            cd ../../../..
             # Format the arguments to "./gradlew test"
             GRADLE_ARGS=$(echo $CLASSNAMES | awk '{for (i=1; i<=NF; i++) print "--tests",$i}')
             echo "Prepared arguments for Gradle: $GRADLE_ARGS"
-            ./gradlew test $GRADLE_ARGS
+            ./gradlew :backend:test $GRADLE_ARGS
       - save_cache:
           paths:
             - ~/.gradle/wrapper
@@ -41,26 +41,26 @@ jobs: # a collection of steps
       - save_cache:
           paths:
             - ~/.gradle/caches
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
+          key: v1-gradle-cache-{{ checksum "build.gradle" }}-{{ checksum "backend/build.gradle" }}
       - store_test_results:
       # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: build/test-results/test
+          path: backend/build/test-results/test
       - store_artifacts: # Upload test results for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: build/test-results/test
+          path: backend/build/test-results/test
           when: always
       - run:
           name: Assemble JAR
           command: |
             # Skip this for other nodes
             if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
-              ./gradlew assemble
+              ./gradlew :backend:stage
             fi
       # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
       - store_artifacts:
-          path: build/libs
+          path: backend/build/libs
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   build_frontend:
-    working_directory: ~/plantmap/frontend
+    working_directory: ~/plantmap
     docker:
       - image: circleci/android:api-29
     environment:
@@ -69,27 +69,27 @@ jobs: # a collection of steps
       - checkout:
           path: ~/plantmap
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "frontend/build.gradle" }}-{{ checksum  "frontend/app/build.gradle" }}
       - run:
           name: Download Dependencies
-          command: ./gradlew androidDependencies
+          command: ./gradlew :frontend:app:androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "frontend/build.gradle" }}-{{ checksum  "frontend/app/build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew lint test
+          command: ./gradlew :frontend:app:lint :frontend:app:test
       - run:
           name: Assemble APK
-          command: ./gradlew assembleDebug
+          command: ./gradlew :frontend:app:assembleDebug
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
-          path: app/build/reports
+          path: frontend/app/build/reports
           destination: reports
       - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
+          path: frontend/app/build/test-results
       - store_artifacts:
-          path: app/build/outputs/apk/debug
+          path: frontend/app/build/outputs/apk/debug
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
   deploy_to_heroku:
     machine:
@@ -104,7 +104,8 @@ jobs: # a collection of steps
           command: bash .circleci/setup-heroku.sh # run a script to set up Heroku
       - run:
           name: Deploy to Heroku
-          command: git subtree push --prefix backend/ heroku master
+          command: | # Deploy only if changes have been made in backend/**/* or Procfile
+            git diff --name-only --diff-filter=AMDR @~..@ | grep -E "^backend/|^Procfile" && git push heroku master
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -126,4 +127,3 @@ workflows:
               only: master
           requires:
             - build_backend
-            - build_frontend
