Add project secrets loading mechanism in Gradle build process (notably the Google Maps API key)

--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,6 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
 
+apply from: 'secrets.gradle'
+
 task stage(dependsOn: ':backend:stage')
