--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -32,8 +32,13 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude("META-INF/*.kotlin_module")
     }
+
     lintOptions {
         warning 'InvalidPackage'
+    }
+
+    defaultConfig {
+        manifestPlaceholders = [mapsApiKey: secretProps['mapsApiKey']]
     }
 }
 
@@ -57,7 +62,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.volley:volley:1.1.1'
-
-    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0'
 }
