Added tests for the front end
Added unit tests for the frontend's client. Additionally, added manual test descriptions for the overall app.

--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -50,6 +50,10 @@ android {
     defaultConfig {
         manifestPlaceholders = [mapsApiKey: secretProps['mapsApiKey']]
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -65,6 +69,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation 'org.json:json:20190722'
+    androidTestImplementation 'org.mockito:mockito-android:3.3.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
