--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -10,6 +10,7 @@ targetCompatibility = 1.11
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -24,6 +25,9 @@ dependencies {
     // JUnit
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    // Mockito test
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+
     // Spark Framework
     compile "com.sparkjava:spark-core:2.8.0"
 
@@ -35,6 +39,10 @@ dependencies {
 
     //mssql
     compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '7.1.4.jre8-preview'
+
+    //logs
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
 }
 
 task stage(dependsOn: ['build', 'clean'])
