--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -26,9 +29,16 @@
         </activity>
         <activity android:name=".ui.RegisterSubmissionActivity" />
         <activity android:name=".ui.ViewSubmissionActivity" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="edu.uw.cs403.plantmap.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
-
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-
 
 </manifest>
